# onto-deside-patterns

./: README.md  docker-compose.yml  nginx.conf
api/: Dockerfile  __main__.py  pyproject.toml  run.sh
web/: Dockerfile  __main__.py  pyproject.toml  run.sh
web/.streamlit/: config.toml
web/assets/: custom.css
web/fewshot_data/: better_than_human.csv  better_than_human_2.csv
web/utils/: __init__.py
