[tool.poetry]
name = "web"
version = "0.1.0"
description = "patterns web"
authors = ["Peter Vajdecka <peter.vajdecka@oaks.cz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "1.28.2"
streamlit-chat = "0.1.1"
streamlit-pandas-profiling = "^0.1.3"
pandas = "^2.2.3"
tools = "^0.1.9"
common = "^0.1.2"
setuptools = "^75.8.2"
streamlit-aggrid = "^1.1.1"
extra-streamlit-components = "^0.1.71"
streamlit-js = "^1.0.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
autopep8 = "^2.3.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"